--- a/yawordle/Assets/_Yawordle/UI/GameScreen.uxml
+++ b/yawordle/Assets/_Yawordle/UI/GameScreen.uxml
@@ -10,17 +10,15 @@
     <ui:Style src="GameScreen.uss" />
     
     <ui:VisualElement name="screen-container" class="screen-container">
-        <ui:VisualElement name="main-content" class="main-content">
-            <ui:VisualElement name="header" class="header">
-                <ui:Button name="settings-button" text="⚙️" class="icon-button" />
-                <ui:Label text="YAWORDLE" class="title" />
-            </ui:VisualElement>
-            <ui:VisualElement name="game-area" class="game-area">
-                <ui:VisualElement name="game-board-container" class="game-board-container" />
-            </ui:VisualElement>
-            <ui:VisualElement name="keyboard-container" class="keyboard-container" />
+        <ui:VisualElement name="header" class="header">
+            <ui:Button name="settings-button" text="⚙️" class="icon-button" />
+            <ui:Label text="YAWORDLE" class="title" />
         </ui:VisualElement>
-        <ui:VisualElement name="modal-container" class="modal-container" />
+        <ui:VisualElement name="game-area" class="game-area">
+            <ui:VisualElement name="game-board-container" class="game-board-container" />
+        </ui:VisualElement>
+        <ui:VisualElement name="keyboard-container" class="keyboard-container" />
+        <ui:VisualElement name="modal-container" class="modal-container" picking-mode="Ignore"/>
     </ui:VisualElement>
     
 </ui:UXML>
