--- a/yawordle/Assets/_Yawordle/UI/SettingsPanel.uss
+++ b/yawordle/Assets/_Yawordle/UI/SettingsPanel.uss
@@ -13,6 +13,16 @@
     padding: 20px;
     margin-left: auto;
     margin-right: auto;
+
+    transition: opacity 0.25s ease-out, scale 0.3s ease-out;
+    opacity: 0;
+    scale: 1.1;
+    transform-origin: center;
+}
+
+.settings-panel--is-visible {
+    opacity: 1;
+    scale: 1;
 }
 
 .title {
