refactor ui unify modal pattern add tokens and reorganize assets
- introduce shared overlay modal in GameScreen instead of per panel overlays

add Components modal.uss with classes modal modal--is-open modal__content modal__panel modal__panel--is-visible
add UIUtils.cs with helpers OpenModal and CloseModal
rewrite EndGameView SettingsView InstructionsView to toggle classes instead of style display
instantiate panels as TemplateContainer with class modal__content to fill overlay and center panel
scope panel styles with BEM end-game-panel__* instructions-panel__* settings-panel__* instead of global title button
move panel assets to UI Panels and add dedicated uss files end-game-panel.uss instructions-panel.uss settings-panel.uss
move GameScreen to UI Screens and rename stylesheet to game-screen.uss
add Themes tokens.uss with colors font sizes and spacing and remove local root definitions from panels
unify color variable names for example color button secondary
cleanup styles and uxml hierarchy remove old files and duplicates

BREAKING CHANGE: paths to uxml and uss changed to Panels and Screens update imports if code referenced file paths

--- a/yawordle/Assets/_Yawordle/UI/Screens/GameScreen.uxml
+++ b/yawordle/Assets/_Yawordle/UI/Screens/GameScreen.uxml
@@ -5,10 +5,11 @@
     xmlns:engine="UnityEngine.UIElements"
     xmlns:uie="UnityEditor.UIElements"
     xmlns:cui="Bitbebop"
-    xsi:noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd"
+    xsi:noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd"
 >
-    
-    <ui:Style src="GameScreen.uss" />
+    <ui:Style src="../Themes/tokens.uss" />
+    <ui:Style src="../Components/modal.uss" />
+    <ui:Style src="game-screen.uss" />
     
     <cui:SafeArea name="screen-container" class="screen-container">
         <ui:VisualElement name="header" class="header">
@@ -20,7 +21,7 @@
             <ui:VisualElement name="game-board-container" class="game-board-container" />
         </ui:VisualElement>
         <ui:VisualElement name="keyboard-container" class="keyboard-container" />
-        <ui:VisualElement name="modal-container" class="modal-container" picking-mode="Ignore"/>
+        <ui:VisualElement name="modal-container" class="modal" />
         <ui:Label name="toast-notification" class="toast-notification" picking-mode="Ignore"/>
     </cui:SafeArea>
     
